--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7"
