--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/socket.io": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -30,7 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7",
-    "ws": "^8.16.0"
+    "socket.io": "^4.7.4",
+    "sqlite3": "^5.1.7"
   }
 }
